@@ -1,3 +1,12 @@
+2013-02-18  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* build-linux.sh: Build a 4.8 static busybox only.
+	* run-uclibc-tests.sh: Build directories corrected for 4.8 release.
+
+2013-02-11  Jeremy Bennett <jeremy.bennett@embecosm.com>
+
+	* arc-versions.sh (uclibc): Switch to 4.8 branch.
+
 2013-02-06  Jeremy Bennett <jeremy.bennett@embecosm.com>
 
 	* arc-init.sh (run_check, save_res): Remove use of bash "function"
